--- a/app/src/main/res/layout/change_city_layout.xml
+++ b/app/src/main/res/layout/change_city_layout.xml
@@ -14,7 +14,7 @@
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/backButton"
+        android:id="@+id/btn_back"
         android:src="@drawable/left"
         android:background="@null"
         android:contentDescription="@string/back_button_description"
@@ -23,19 +23,19 @@
         android:layout_alignParentStart="true"/>
 
     <EditText
+        android:id="@+id/edt_cityName"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
 
-        android:hint="@string/default_query"
+        android:layout_centerVertical="true"
         android:background="@color/white"
-        android:textSize="30sp"
-        android:inputType="textAutoCorrect"
-        android:id="@+id/queryET"
-        android:textColor="@color/black"
+        android:gravity="center_vertical|center_horizontal"
+        android:hint="@string/default_query"
         android:imeOptions="actionGo"
-        android:gravity="center_vertical|center_horizontal"/>
+        android:inputType="textAutoCorrect"
+        android:textColor="@color/black"
+        android:textSize="30sp"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -45,7 +45,7 @@
         android:textSize="50sp"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/getWeatherTV"
-        android:layout_below="@+id/backButton"
+        android:layout_below="@+id/btn_back"
         android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
